<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/menu_venue" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_baseline_book_online_24"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_cancle"
            android:icon="@drawable/ic_baseline_cancel_24"
            android:title="@string/menu_cancle" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_logout" />
    </group>
</menu>