<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_cancle"
        android:name="com.example.event_management.ui.booked_event.Fragment_booked_event"
        android:label="Booked Events"
        tools:layout="@layout/fragment_booked_event" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.event_management.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.event_management.ui.gallery.GalleryFragment"
        android:label="@string/menu_venue"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.event_management.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.event_management.ui.book.Fragment_book"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_book" />
</navigation>